fix inline code not readable in bulruk

--- a/src/main-scss/bubble.scss
+++ b/src/main-scss/bubble.scss
@@ -13,9 +13,9 @@
 		.bubble-title {
 			font-weight: bold;
 		}
-		code {
-			color: $bubble-color;
-		}
+		//code {
+		//	color: $bubble-color;
+		//}
 		min-width: 22px;
 		min-height: 22px;
 		&.text {
